--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
   - docker build -t suren2787/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true suren2787/docker-react npm run test
+  - docker run -e suren2787/docker-react npm run test -- --coverage
